I added the rating layout and java code and also the drawables and added in the styles the rating style so the task is working pretty good

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activation" />
+        <activity android:name=".Rating" />
     </application>
 
 </manifest>
