--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="false"
         android:theme="@style/AppTheme.NoActionBar"
         tools:replace="android:icon,android:theme">
-        <activity android:name=".HomeActivity">
+        <activity android:name=".IntroLogoActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
