I changed the activity_home.xml to activity_intro I removed the added lines in IntroActivity.java because they are now in main.java

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="false"
         android:theme="@style/AppTheme.NoActionBar"
         tools:replace="android:icon,android:theme">
-        <activity android:name=".IntroLogoActivity">
+        <activity android:name=".IntroActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
